# StylusArena

./: .env.example  .gitignore  ENV_FILES_SUMMARY.md  ENV_SETUP_GUIDE.md  LICENSE  README.md
backend/: package.json
backend/src/: index.ts
contracts/: README.md  StylusArena.sol  hardhat.config.js  package.json
contracts/scripts/: deploy.js
contracts/stylus/: Cargo.toml  build_err.txt  deploy.sh  output.txt  output2.txt
contracts/stylus/src/: lib.rs  main.rs
frontend/: .gitignore  README.md  next.config.js  package.json  phaser.d.ts  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/agents/analytics/: page.tsx
frontend/app/agents/deploy/: page.tsx
frontend/app/agents/test/: page.tsx
frontend/app/components/: Icons.tsx  LoadingSkeleton.tsx  Navbar.tsx  NotificationCenter.tsx  SafeConnectButton.tsx  Toaster.tsx  WalletErrorBoundary.tsx  WalletGuard.tsx
frontend/app/games/: page.tsx
frontend/app/games/battle/: page.tsx
frontend/app/games/card/: page.tsx
frontend/app/games/memory/: page.tsx
frontend/app/games/puzzle/: page.tsx
frontend/app/games/racing/: page.tsx
frontend/app/games/resource/: page.tsx
frontend/app/games/strategy/: page.tsx
frontend/app/games/tower/: page.tsx
frontend/app/landing/: page.tsx
frontend/app/marketplace/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/training/: page.tsx
frontend/backend-ts/: .env.example
frontend/frontend/: .env.local.example
frontend/hooks/: useStylusArena.ts
frontend/lib/: contracts.ts  gameAudio.ts
(+1 files in other folders)
